# sri-ride

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: sri-ride.yml
manual_test/: readme.txt  sin_pdf.py  test_render.py
manual_test/xml/: factura_test_1_anexo.xml  factura_test_sin_anexo.xml  retencion_02.xml  test_guiaRemision_v1.xml  test_guiaRemision_v2.xml  test_guiaRemision_v3.xml  test_nota-credito_v1.xml  test_nota-debito_v1.xml  test_nota-debito_v2.xml  test_nota-debito_v3.xml
src/sriRide/: __init__.py  cli.py  contexto_sri_router.py  help.txt  help_ia_payload.json  help_ia_payload_library.json
src/sriRide/core/: __init__.py  xml_utils.py
src/sriRide/factura/: __init__.py  anexos.py  cliente.py  doc.py  emisor.py  exportador.py  index.py  normalizer.py  producto.py  reembolso.py  remision.py  repetibles.py  totales.py  xml_utils.py
src/sriRide/guia_remision/: __init__.py  destinatario.py  doc.py  emisor.py  index.py  normalizer.py  producto.py  repetibles.py  transportista.py  xml_utils.py
src/sriRide/nota_credito/: __init__.py  cliente.py  comprobante.py  doc.py  emisor.py  index.py  normalizer.py  producto.py  repetibles.py  salida.json  totales.py  xml_utils.py
src/sriRide/nota_debito/: __init__.py  cliente.py  comprobante.py  doc.py  emisor.py  index.py  normalizer.py  producto.py  repetibles.py  salida.json  totales.py  xml_utils.py
src/sriRide/preproceso/: __init__.py  barcode_sri.py  logo.py  preproceso_sri.py
src/sriRide/render/: __init__.py  (+4 more)
tests/: test_html_outputs.py
(+54 files in other folders)
